# BTWTypeBeat

./: .gitattributes  CMakeLists.txt  README.md
include/Classes/: Camera.hpp  Shader.hpp  Texture.hpp
include/Classes/Geometry/: Cube.hpp  TexturedCube.hpp
include/Engine/Classes/: Camera.hpp
include/Engine/Classes/Geometry/: Cube.hpp  DrawableObject.hpp  TexturedCube.hpp
include/Engine/Filesystem/: FileReader.h
include/Engine/Singletons/: EngineSystemsManager.hpp  RenderingManager.hpp  WindowManager.hpp
include/Filesystem/: FileReader.h
include/Game/Classes/: Block.hpp  Chunk.hpp  ChunkManager.hpp
src/: CMakeLists.txt  main.cpp
src/Classes/: CMakeLists.txt  Camera.cpp  Shader.cpp  Texture.cpp
src/Classes/Filesystem/: CMakeLists.txt  FileReader.c
src/Classes/Geometry/: CMakeLists.txt  Cube.cpp  TexturedCube.cpp
src/Engine/: CMakeLists.txt
src/Engine/Classes/: CMakeLists.txt  Camera.cpp  ChunkManager.cpp  Shader.cpp  Texture.cpp
src/Engine/Classes/Geometry/: Cube.cpp  TexturedCube.cpp
src/Engine/Filesystem/: FileReader.c
src/Engine/Singletons/: CMakeLists.txt  EngineSystemsManager.cpp  RenderingManager.cpp  WindowManager.cpp
src/Filesystem/: FileReader.c
src/Game/Classes/: Block.cpp  CMakeLists.txt  Chunk.cpp
src/Shaders/: fragmentShader.frag  fragmentShaderBlue.frag  fragmentShaderGreen.frag  texTestFragShader.frag  texTestVertShader.vert  vertexShader.vert
src/glad/: CMakeLists.txt  glad.c
todo-list/: gml.todo  gwl.todo
